# hdBlackbird

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CODEOWNERS  LICENSE-THIRDPARTY.txt  README.md  package.py
.github/workflows/: cmake.yml
cmake/: FindHoudiniUsd.cmake  FindPixarUsd.cmake  FindUsd.cmake
cmake/defaults/: Options.cmake  Packages.cmake  Version.cmake  msvcdefaults.cmake
cmake/macros/: Private.cmake  Public.cmake
cmake/modules/: FindCycles.cmake  FindHoudini.cmake  FindNanoVDB.cmake  FindOpenEXR.cmake  FindOpenSubdiv.cmake  FindPyOpenGL.cmake  FindPySide.cmake  FindUSD.cmake  FindUsdCycles.cmake
docker/: Dockerfile
plugin/: CMakeLists.txt
plugin/hdCycles/: CMakeLists.txt  api.h  attributeSource.cpp  attributeSource.h  basisCurves.cpp  basisCurves.h  camera.cpp  camera.h  config.cpp  config.h  debug_codes.cpp  debug_codes.h  hdcycles.h  instancer.cpp  instancer.h  light.cpp  light.h  material.cpp  material.h  mesh.cpp  mesh.h  meshRefiner.cpp  meshRefiner.h  meshSource.cpp  meshSource.h  meshTopology.cpp  meshTopology.h  objectSource.cpp  objectSource.h  openvdb_asset.cpp  openvdb_asset.h  plugInfo.json  points.cpp  points.h  renderBuffer.cpp  renderBuffer.h  renderDelegate.cpp  renderDelegate.h  renderParam.cpp  renderParam.h  (+17 more)
plugin/hdCycles/Mikktspace/: mikktspace.c  mikktspace.h
plugin/hdCycles/houdini/: houdini_vdb_loader.cpp  houdini_vdb_loader.h
plugin/ndrCycles/: CMakeLists.txt  api.h  discovery.cpp  discovery.h  parser.cpp  parser.h  plugInfo.json
plugin/usdCycles/: CMakeLists.txt  __init__.py  module.cpp  moduleDeps.cpp  plugInfo.cmake  schema.usda
plugin/usdImagingBb/: CMakeLists.txt  engine.cpp  engine.h
plugin/usdImagingCycles/: CMakeLists.txt  engine.cpp  engine.h
tests/: CMakeLists.txt  README.md  lsan.supp  test_attributeSource.cpp  test_transformSource.cpp  tests.cpp
tools/: CMakeLists.txt
tools/houdini/: CMakeLists.txt  hda_generator.cpp
